update scratch def config

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,6 @@
 {
-  "orgName": "agreenberg company",
+  "orgName": "friendlycaptcha-scratch",
+  "language": "en_US",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
