Document creating a Flow

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -17,6 +17,7 @@
     "Friendly Captcha": "0HoWz00000004y5KAA",
     "Friendly Captcha@0.1.0-1": "04tWz000000M6I5IAK",
     "Friendly Captcha@0.1.0-2": "04tWz000000MENhIAO",
-    "Friendly Captcha@0.1.0-3": "04tWz000000MEfRIAW"
+    "Friendly Captcha@0.1.0-3": "04tWz000000MEfRIAW",
+    "Friendly Captcha@0.1.0-4": "04tWz000000MLiXIAW"
   }
 }
